--- a/node-bff-aws-lambda/package.json
+++ b/node-bff-aws-lambda/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.93",
     "@types/node": "^17.0.21",
+    "@types/node-fetch": "^2.6.1",
     "@types/pino": "^7.0.5",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
@@ -18,6 +19,7 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
+    "node-fetch": "2",
     "pino": "^7.8.1"
   },
   "scripts": {
